Almost working (JSON + image sent to server)

--- a/templates/video.html
+++ b/templates/video.html
@@ -6,7 +6,10 @@
             <h1 class="display-3">Video Display</h1>
             <p class="lead">You are being recorded lol</p>
             <video autoplay width="480" height="360"></video>
+            <canvas id="idCan" width="480" height="360"></canvas>
             <p><input type="button" id="stopbt" value="STOP" class="btn btn-lg btn-success"/></p>
+            <button id="snap" class="btn btn-lg">Take screenshot</button>
+            <a id="downloadLnk" download="YourFileName.jpg">Download as image</a>
         </div>
         <script type="text/javascript" src="{{ url_for('static', filename='record.js') }}"></script>
     </main>
