--- a/templates/video.html
+++ b/templates/video.html
@@ -8,6 +8,7 @@
             <video autoplay width="480" height="360"></video>
             <canvas id="idCan" width="480" height="360"></canvas>
             <p><input type="button" id="stopbt" value="STOP" class="btn btn-lg btn-success"/></p>
+            <p id="output"></p>
         </div>
         <script type="text/javascript" src="{{ url_for('static', filename='record.js') }}"></script>
     </main>
