--- a/templates/video.html
+++ b/templates/video.html
@@ -9,6 +9,7 @@
             <canvas id="idCan" width="480" height="360"></canvas>
             <p><input type="button" id="stopbt" value="STOP" class="btn btn-lg btn-success"/></p>
             <p id="output"></p>
+            <audio controls><source src="static/audios/Sad1.mp3"></audio> 
         </div>
         <script type="text/javascript" src="{{ url_for('static', filename='record.js') }}"></script>
     </main>
