Update with contactus and a README

--- a/app/templates/disclaimer.html
+++ b/app/templates/disclaimer.html
@@ -4,8 +4,9 @@
     <main role="main">
         <div class="jumbotron" style="text-align: center">
             <h1 class="display-3">Disclaimer</h1>
-            <p class="lead">Microsoft may store your images online on their server. Anything on this site is done
-            at your own risk</p>
+            <p class="lead">Microsoft may store your images online on their server. The team is not responsible for any
+                accidents that happen. Everything is done at your own risk. However, please enjoy yourself and hope you
+                like it!</p>
         </div>
     </main>
 {% endblock %}
