--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -11,7 +11,7 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/video">Video</a>
+              <a class="nav-link" href="/video">EmotionWrite</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/sleep">KeepAwake</a>
@@ -23,14 +23,12 @@
               <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown09" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
               <div class="dropdown-menu" aria-labelledby="dropdown09">
                 <a class="dropdown-item" href="/aboutus">About us</a>
+                <a class="dropdown-item" href="/contactus">Contact us</a>
                 <a class="dropdown-item" href="/disclaimer">Disclaimer</a>
-                <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
           </ul>
-          <form class="form-inline my-2 my-md-0">
-            <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-          </form>
+
         </div>
       </nav>
 </div>
