--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,13 @@
     <main role="main">
         <div class="jumbotron" style="text-align: center">
             <h1 class="display-3">Hackathon</h1>
-            <p class="lead">Welcome to our page! Continue to video tab above or the button below for some magic, powered by
-            Microsoft</p>
+            <p class="lead">Welcome to our page!
+                Over here are just some possible implementations using a few of Microsoft Cognitive
+                Services API. These examples were done in a short time during the Oxford Hackathon 2017 and are just a
+                few possible uses of the Microsoft Cognitive Services API. For more information, check our about us
+                in the navigation bar!</p>
+
+            <p class="lead">Please continue to video tab above or the button below for some magic, powered by Microsoft</p>
             <p><a class="btn btn-lg btn-success" href="/video" role="button">Click here for some magic</a></p>
         </div>
     </main>
