--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -3,7 +3,7 @@
 {% block body %}
     <main role="main">
         <div class="jumbotron" style="text-align: center">
-            <h1 class="display-3">Video Display</h1>
+            <h1 class="display-3">Emotion Write</h1>
             <p class="lead">How are you feeling today?</p>
             <video autoplay width="480" height="360"></video>
             <canvas id="idCan" width="480" height="360"></canvas>
