--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -4,7 +4,19 @@
     <main role="main">
         <div class="jumbotron" style="text-align: center">
             <h1 class="display-3">About Us</h1>
-            <p class="lead">We're team 1+A2I and this is our work for Oxford Hackathon 2017</p>
+            <p class="lead">We're team 1+A2I and this is our work for Oxford Hackathon 2017! Over here are just some
+                possible implementations using a few of APIs by Microsoft Cognitive Services API.
+                Most of the code was done in python, with a bit of HTML and Javascript for good measure.
+            </p>
+            <p class="lead"><b>EmotionWrite</b> was made using a mix of the new Emotion API by Microsoft and standard Python
+            packages</p>
+
+            <p class="lead"><b>KeepAwake</b> was made using the Custom Vision API trained on the Marcelo data set (one of our
+            team mates) to identify if the user is sleeping</p>
+
+            <p class="lead"><b>HardwareInterface</b> was made using the Face API to receive pose estimates that are used to
+            control an Arduino over serial. Possibilities are endless!</p>
+
         </div>
     </main>
 {% endblock %}
