--- a/app/templates/hardware.html
+++ b/app/templates/hardware.html
@@ -3,8 +3,8 @@
 {% block body %}
     <main role="main">
         <div class="jumbotron" style="text-align: center">
-            <h1 class="display-3">Hardware Control</h1>
-            <p class="lead">Arduino Interfacing</p>
+            <h1 class="display-3">Hardware Intefacing</h1>
+            <p class="lead">Arduino Control</p>
             <video autoplay width="480" height="360"></video>
             <canvas id="idCan" width="480" height="360"></canvas>
             <p><input type="button" id="stopbt" value="STOP" class="btn btn-lg btn-success"/></p>
