--- a/app/templates/sleep.html
+++ b/app/templates/sleep.html
@@ -9,6 +9,7 @@
             <canvas id="idCan" width="480" height="360"></canvas>
             <p><input type="button" id="stopbt" value="STOP" class="btn btn-lg btn-success"/></p>
             <p id="output"></p>
+            <audio id="aud" style="display: none"></audio>
         </div>
         <script type="text/javascript" src="{{ url_for('static', filename='record_sleep.js') }}"></script>
     </main>
