--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -22,6 +22,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/datagen">DataGen</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/satnav">SatNav</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown09" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
               <div class="dropdown-menu" aria-labelledby="dropdown09">
